# docs/swagger.json
@@ -150,8 +150,12 @@
                 "otp": {
                     "type": "string"
                 },
-                "requester": {
+                "referenceToken": {
                     "type": "string"
+                },
+                "requester": {
+                    "type": "string",
+                    "example": "jim@starfleet.com"
                 }
             }
         },
